# lc

./: .gitignore
1/: go.mod  main.go
10/: go.mod  main.go
102/: go.mod  main.go
103/: lib.h  libtest.cpp
104/: go.mod  main.go
105/: go.mod  main.go
1060/: go.mod  main.go
107/: go.mod  main.go
108/: go.mod  main.go
11/: go.mod  main.go
1108/: go.mod  main.go
114/: go.mod  main.go
1167/: 1167  go.mod  main.go
1192/: Cargo.toml
12/: go.mod  main.go
121/: go.mod  main.go
122/: go.mod  main.go
1221/: go.mod  main.go
1229/: 1229  go.mod  main.go
125/: go.mod  main.go
128/: go.mod  main.go
13/: go.mod  main.go
136/: go.mod  main.go
138/: go.mod  main.go
139/: go.mod  main.go
14/: go.mod  main.go
141/: go.mod  main.go
146/: go.mod  main.go
15/: go.mod  main.go
151/: go.mod  main.go
152/: go.mod  main.go
155/: go.mod  main.go
167/: go.mod  main.go
169/: go.mod  main.go
17/: go.mod  main.go
176/: go.mod  main.sql
19/: go.mod  main.go
190/: go.mod  main.go
198/: go.mod  main.go
20/: go.mod  main.go
200/: CMakeLists.txt  lib.h  libtest.cpp
202/: go.mod  main.go
206/: go.mod  main.go
207/: go.mod  main.go
208/: go.mod  main.go
21/: go.mod  main.go
215/: go.mod  input.txt  main.go
217/: go.mod  main.go
218/: go.mod  main.go
22/: go.mod  main.go
221/: go.mod  main.go
226/: go.mod  main.go
227/: cargo.toml
230/: go.mod  main.go
232/: go.mod  main.go
234/: go.mod  main.go
236/: go.mod  main.go
238/: go.mod  main.go
239/: go.mod  (+1 more)
353/: CMakeLists.txt  lib.h  libtest.cpp
(+267 files in other folders)
